# hackathon-marakech-2025-12-15

./: README.md  next.config.ts  pnpm-lock.yaml
Too Good To Hire/: TODO.md  package-lock.json  package.json
Too Good To Hire/src/app/: layout.tsx  page.tsx
Too Good To Hire/src/components/: ScoreRefinementBadge.tsx
Too Good To Hire/src/lib/: email.ts  hrflow.ts  openai.ts  recall.ts  supabase.ts
Too Good To Hire/src/types/: database.ts  index.ts
fact-sight/: package.json
fact-sight/src/app/: layout.tsx
fact-sight/src/components/: icons.tsx
fact-sight/src/constants/: mock-api.ts
ghost-buster-ai/: .gitignore  README.md
ghost-buster-ai/backend/: .env.example  main.py  pyproject.toml
ghost-buster-ai/backend/models/: schemas.py
ghost-buster-ai/backend/routers/: __init__.py  analysis.py  chat.py
ghost-buster-ai/backend/services/: email.py  hrflow.py  video.py
ghost-buster-ai/frontend/: .env.example  index.html  package.json  pnpm-lock.yaml
ghost-buster-ai/frontend/src/: App.tsx
src/components/layout/: app-sidebar.tsx  user-nav.tsx
src/config/: nav-config.ts
src/constants/: data.ts
src/hooks/: use-nav.ts
toogoodtohire/: package-lock.json  package.json
toogoodtohire/src/app/: layout.tsx  page.tsx
toogoodtohire/src/lib/: hrflow.ts  recall.ts
toogoodtohire/src/types/: index.ts
voice-agent/: package-lock.json  package.json  tsconfig.json
voice-agent/app/: layout.tsx  page.tsx
voice-agent/components/: JobCard.tsx  TextInput.tsx  UploadCV.tsx  VoiceRecorder.tsx
voice-agent/lib/: hrflow.ts
voice-agent/types/: index.ts
(+57 files in other folders)
